# scaffold-eth

./: .DrHongoNotes.swp  .coverage  .devcontainer.json  .editorconfig  .env.example  .envrc  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .gitpod.yml  .huskyrc.js  .npmignore  DEXTemplate.sol  Dockerfile  DrHongoNotes  LICENSE  Procfile  README-md  README.md  SUMMARY.md  TODO  artwork.json  changeNetwork.py  docker-compose.yml  flat.txt  foundry.toml  funding.json  index.js  logs.js  notas_arquitectura  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  rollup.config.js  sample.json  setup.cfg  (+5 more)
.husky/: post-checkout  pre-commit  pre-push
Solutions/: DEX.sol  DEXTemplate.sol
buidlguidl.com/: how-to-submit-a-build.md  joining-the-guidl.md  overview.md
built-with-scaffold-eth/: nifty.ink.md  overview.md  personal-token-voting.md  punkwallet.io.md
challenges/: about-these-challenges.md  token-vendor.md  untitled.md
contributing-to-scaffold-eth/: opening-a-pull-request.md  submitting-an-issue.md
deployment/: shipping-your-app.md
docker/: Dockerfile  README.md  docker_build.sh  docker_run.sh  docker_setup.sh  setup.sh  start.sh
examples-and-tutorials/: aave-ape.md  aave-flash-loans-intro.md  bonding-curve.md  chainlink-vrf-nft.md  chainlink.md  defi-subgraphs.md  denial-of-service.md  diamond-standard-exploration.md  emoji-support.md  gtgs-voice-gems.md  honeypot.md  lender.md  merkle-mint-nfts.md  meta-multi-sig-wallet.md  minimal-proxy.md  minimum-viable-payment-channel.md  more-coming-soon.md  nft-auction.md  (+19 more)
(+116 files in other folders)
