[metadata]
name = starknet-nft
version = attr: starknet-nft.__version__
description = Starknet NFT Contracts written in Cairo for StarkNet
author = Abdelhamid Bakhta
author_email = abdelhamid.bakhta@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/scaffold-eth/scaffold-eth
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =packages/nile/src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = packages/nile/src
exclude =
    tests

[options.package_data]
starkvest = "*.cairo"

[options.extras_require]
testing =
    cairo-lang
    cairo-nile
    openzeppelin-cairo-contracts
    setuptools
    tox
    twine
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov nile --cov-report term-missing
    --verbose
markers =
    end_to_end: End-to-end tests, potentially slow.
norecursedirs =
    dist
    build
    .tox
testpaths = packages/nile/tests